# miniclaw

./: .gitignore  DESIGN_DOC.md  README.md  check_date.cpp  cleanup.sh  run_backend.sh
backend/: .gitignore  AGENTS.md  CMakeLists.txt  MEMORY.md  SOUL.md  build_log.txt  config.yaml  health_check.txt  subagent_test.txt
backend.rs/: Cargo.toml  compile_errors.txt  tauri_setup.md
backend.rs/index/tantivy/: meta.json
backend.rs/skills/test_skill/: SKILL.md
backend.rs/src/: config.rs  lib.rs  main.rs
backend.rs/src/agent/: mod.rs  skills.rs  subagent.rs
backend.rs/src/memory/: index.rs  mod.rs  session.rs  store.rs
backend.rs/src/tools/: gmail.rs  gmail_verify.rs  mod.rs
backend.win32/: .gitignore
backend.win32/src/: agent.hpp
backend.win32/src/agent/: context.hpp  curl_manager.hpp  fiber_pool.hpp  loop.hpp  memory.hpp  memory_index.cpp  session.hpp  shutdown.cpp  shutdown.hpp  skills.hpp
backend.win32/src/tools/: busybox.hpp  gmail.hpp  spawn.hpp
backend.win32/tests/: test_distillation.cpp  test_distillation_real.cpp
backend.win32/tools/: copy_deps.sh  setup_deps.sh
backend/config/: config.yaml
backend/config/prompts/: prompt_compaction.txt  prompt_periodic.txt
backend/include/fiber/: fiber.h  fiber.hpp  fiberq.h  spinlock.h  sysdef.h
backend/memory/: HISTORY.md  MEMORY.md
backend/scripts/: build.mingw.sh  build.sh  bundle.sh  copy_deps.sh  setup_deps.sh
backend/skills/: README.md
backend/skills/weather/: SKILL.md
backend/src/: agent.cpp  agent.hpp  config.hpp  fiber.h  json_util.hpp  main.cpp  server_bridge.cpp
backend/src/agent/: agent_types.hpp  chat_gateway.cpp  chat_gateway.hpp  context.hpp  cron_service.cpp  cron_service.hpp  curl_manager.hpp  fiber_pool.cpp  fiber_pool.hpp  lapack_android_stub.c  loop.hpp  memory.hpp  memory_index.cpp  memory_index.hpp  session.hpp  subagent.hpp  ws_client.cpp  ws_client.hpp
backend/src/tools/: busybox.hpp  cron.hpp  file.hpp  gmail.hpp  spawn.hpp  terminal.hpp  tool.hpp  web.hpp
backend/tests/: test_agent_loop.cpp  test_busybox.cpp  test_distillation.cpp  test_distillation_real.cpp  test_fiber.cpp  test_gmail.cpp  test_memory_index.cpp  test_multinode.py  test_react.py  test_sse.py  test_token_distillation.cpp
backend/tools/: build.sh  build_android.sh  build_deps_android.sh  copy_deps.sh  setup_deps.sh
docs/: Memory_System_Refinements.md  OpenClaw.Memory.md  analysis_01.txt  miniclaw.README.txt  openclaw_01.txt  openclaw_usage.txt
frontend/: .gitignore  package-lock.json  package.json
frontend/miniclaw/: IDENTITY.md  SOUL.md
frontend/miniclaw/config/: config.example.yaml  config.yaml
frontend/miniclaw/config/prompts/: prompt_session.txt
frontend/miniclaw/skills/gmail/: gmail_tool.py
frontend/src/: App.tsx  index.css
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/index/lucene/: _0.cfs  segments_2
frontend/src-tauri/resources/workspace/: TOOLS.md
frontend/src-tauri/resources/workspace/config/: config.example.yaml  config.yaml
frontend/src-tauri/resources/workspace/config/prompts/: prompt_periodic.txt
frontend/src-tauri/resources/workspace/memory/: MEMORY.md
frontend/src-tauri/resources/workspace/skills/gmail/: SKILL.md  get_access_token.py
frontend/src-tauri/resources/workspace/skills/windows-task-scheduler/: SKILL.md
frontend/src-tauri/src/: lib.rs
frontend/src/components/: Chat.tsx  Monitoring.tsx  Settings.tsx  Sidebar.tsx
frontend/src/contexts/: AppContext.tsx
