[package]
name = "miniclaw_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower-http = { version = "0.5", features = ["cors"] }
async-trait = "0.1"
dotenv = "0.15"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
urlencoding = "2"
